# jalak

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
plugins/: Makefile.am  plugins.mk
plugins/bar/: Makfile.am  bar.plugin
plugins/foo/: Makefile.am  foo.vala
plugins/foo/js/: foo.vala
public/: app.js  index.html  main.js
public/jam/: require.config.js  require.js
public/plugins/: foo.js
src/: app.vala  main.vala  page.vala  util.vala
src/js/: app.vala
src/plugins/: plugins.vala
vapi/: config.vapi  jalak.deps
